--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,19 @@
   align-items: center;
   height: 40px;
 }
+
+input[type="text"] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 2px solid rgb(146, 141, 141);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
