--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
   display: inline-block;
   font-size: 14px;
   cursor: pointer;
+  margin: 8px;
 }
 
 .optionsStyle {
@@ -31,7 +32,6 @@
 input[type="text"] {
   width: 50%;
   padding: 12px 20px;
-  margin: 8px 0;
   display: inline-block;
   border: 2px solid rgb(146, 141, 141);
   border-radius: 4px;
@@ -42,4 +42,12 @@ div {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+.marginClass {
+  margin: 5px;
+}
+
+span {
+  text-align: left;
 }
