--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,16 @@ div {
 span {
   text-align: left;
 }
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
+.correctAnswerClass {
+  color: green;
+}
+
+.wrongAnswerClass {
+  color: red;
+}
